--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=asistent-post-accident
 spring.datasource.url=jdbc:mysql://localhost:3306/asistent_post_accident?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
 #allowPublicKeyRetrieval=true avoids one common authentication error on local dev when using newer connectors.
 spring.datasource.username=appuser
-spring.datasource.password=Colorado112!Colorado112!
+spring.datasource.password=complete_here
 
 # Explicit driver (helps Spring determine the driver)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
